--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-         sudo apt update
-         sudo apt install -y python3-pip
-         sudo pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run tests
         run: pytest
