--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,13 +53,22 @@ jobs:
           ls -al
           whoami
           pwd
-     
+      - name: copy files to EC2
+        uses: appleboy/ssh-action@v1.2.0 
+        with:
+          host: ${{ secrets.STAGING_HOST }}
+          username: ${{ secrets.STAGING_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: ./
+          target: /home/ubuntu
       - name: Deploy to Staging EC2
         uses: appleboy/ssh-action@v1.2.0   
         with:
           host: ${{ secrets.STAGING_HOST }}
           username: ${{ secrets.STAGING_USER }}
           key: ${{ secrets.SSH_KEY }}
+          port: 22
           script: |
             sudo mkdir -p ~/flask-staging
             sudo tar -xzf flask_app.tar.gz -C ~/flask-staging
@@ -79,17 +88,26 @@ jobs:
         with:
           name: flask_app
       - name: Run some commands
-        run: |
+         run:|
           ls -al
           whoami
           pwd
-     
+      - name: copy files to EC2
+        uses: appleboy/ssh-action@v1.2.0 
+        with:
+          host: ${{ secrets.PROD_HOST }}
+          username: ${{ secrets.PROD_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: ./
+          target: /home/ubuntu
       - name: Deploy to Production EC2
         uses: appleboy/ssh-action@v1.2.0  
         with:
           host: ${{ secrets.PROD_HOST }}
           username: ${{ secrets.PROD_USER }}
           key: ${{ secrets.SSH_KEY }}
+          port: 22
           script: |
             sudo mkdir -p ~/flask-prod
             sudo tar -xzf flask_app.tar.gz -C ~/flask-prod
