--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           tar -czf flask_app.tar.gz *
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4   
+        uses: actions/upload-artifact@v4
         with:
           name: flask_app
           path: flask_app.tar.gz
@@ -48,20 +48,23 @@ jobs:
         uses: actions/download-artifact@v4  
         with:
           name: flask_app
+
       - name: Run some commands
         run: |
           ls -al
           whoami
           pwd
-      - name: copy files to EC2
-        uses: appleboy/ssh-action@v1.2.0 
+
+      - name: Copy files to Staging EC2
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.STAGING_HOST }}
           username: ${{ secrets.STAGING_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: 22
-          source: ./
-          target: /home/ubuntu
+          source: flask_app.tar.gz
+          target: /home/ubuntu/
+
       - name: Deploy to Staging EC2
         uses: appleboy/ssh-action@v1.2.0   
         with:
@@ -70,14 +73,14 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: 22
           script: |
-            sudo mkdir -p ~/flask-staging
-            sudo tar -xzf flask_app.tar.gz -C ~/flask-staging
-            sudo cd ~/flask-staging
-            sudo python3 -m venv venv
-            sudo ./venv/bin/pip install --upgrade pip
-            sudo ./venv/bin/pip install -r requirements.txt
-            sudo nohup ./venv/bin/python flask_app.py > app.log 2>&1 &
-            
+            mkdir -p ~/flask-staging
+            tar -xzf flask_app.tar.gz -C ~/flask-staging
+            cd ~/flask-staging
+            python3 -m venv venv
+            ./venv/bin/pip install --upgrade pip
+            ./venv/bin/pip install -r requirements.txt
+            nohup ./venv/bin/python flask_app.py > app.log 2>&1 &
+
   deploy-production:
     needs: build-test
     if: github.event_name == 'release'
@@ -87,20 +90,23 @@ jobs:
         uses: actions/download-artifact@v4  
         with:
           name: flask_app
+
       - name: Run some commands
-         run:|
+        run: |
           ls -al
           whoami
           pwd
-      - name: copy files to EC2
-        uses: appleboy/ssh-action@v1.2.0 
+
+      - name: Copy files to Production EC2
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.PROD_HOST }}
           username: ${{ secrets.PROD_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: 22
-          source: ./
-          target: /home/ubuntu
+          source: flask_app.tar.gz
+          target: /home/ubuntu/
+
       - name: Deploy to Production EC2
         uses: appleboy/ssh-action@v1.2.0  
         with:
@@ -109,10 +115,10 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: 22
           script: |
-            sudo mkdir -p ~/flask-prod
-            sudo tar -xzf flask_app.tar.gz -C ~/flask-prod
-            sudo cd ~/flask-prod
-            sudo python3 -m venv venv
-            sudo ./venv/bin/pip install --upgrade pip
-            sudo ./venv/bin/pip install -r requirements.txt
-            sudo nohup ./venv/bin/python flask_app.py > app.log 2>&1 &
+            mkdir -p ~/flask-prod
+            tar -xzf flask_app.tar.gz -C ~/flask-prod
+            cd ~/flask-prod
+            python3 -m venv venv
+            ./venv/bin/pip install --upgrade pip
+            ./venv/bin/pip install -r requirements.txt
+            nohup ./venv/bin/python flask_app.py > app.log 2>&1 &
