--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo python -m pip install --upgrade pip
-          sudo pip install -r requirements.txt
+              sudo apt update
+              sudo apt upgrade
+              sudo apt install -y python3-pip
+              sudo pip install -r requirements.txt  # Install dependencies from requirements.txt.
 
       - name: Run tests
         run: pytest
