--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,13 +75,13 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: 22
           script: |
-            sudo mkdir -p ~/flask-staging
-            sudo tar -xzf flask_app.tar.gz -C ~/flask-staging
-            sudo cd ~/flask-staging
-            sudo python3 -m venv venv
-            sudo ./venv/bin/pip install --upgrade pip
-            sudo ./venv/bin/pip install -r requirements.txt
-            sudo nohup ./venv/bin/python flask_app.py > app.log 2>&1 &
+             mkdir -p ~/flask-staging
+             tar -xzf flask_app.tar.gz -C ~/flask-staging
+             cd ~/flask-staging
+             python3 -m venv venv
+             ./venv/bin/pip install --upgrade pip
+             ./venv/bin/pip install -r requirements.txt
+             nohup ./venv/bin/python flask_app.py > app.log 2>&1 &
 
   deploy-production:
     needs: build-test
@@ -117,10 +117,10 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: 22
           script: |
-            sudo mkdir -p ~/flask-prod
-            sudo tar -xzf flask_app.tar.gz -C ~/flask-prod
-            sudo cd ~/flask-prod
-            sudo python3 -m venv venv
-            sudo ./venv/bin/pip install --upgrade pip
-            sudo ./venv/bin/pip install -r requirements.txt
-            sudo nohup ./venv/bin/python flask_app.py > app.log 2>&1 &
+             mkdir -p ~/flask-prod
+             tar -xzf flask_app.tar.gz -C ~/flask-prod
+             cd ~/flask-prod
+             python3 -m venv venv
+             ./venv/bin/pip install --upgrade pip
+             ./venv/bin/pip install -r requirements.txt
+             nohup ./venv/bin/python flask_app.py > app.log 2>&1 &
